syntax = "proto3";

package helloworld;
option go_package = "./greeter";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
  nested newSomething = 2;
}

message nested {
    string wtf = 1;
}
